--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <div class="div1 container py-6">
   <h1 class="text-white text-2xl text-center font-semibold"> IP Address Tracker</h1>
   <div class="card-mail m-auto mx-auto  flex justify-center items-center my-10">
-    <input type="email" class="input1 h-12 placeholder-gray-500 outline-none text-xs rounded-tl-2xl rounded-bl-2xl border-l border-t border-b border-gray-200 rounded-l-md text-base md:text-lg px-3 py-2" placeholder=" Search for any IP address or domain">
-    <button class="bg-black h-12 text-black border-2 border-black font-bold px-3 py-2 focus:outline-none rounded-tr-2xl rounded-br-2xl text-base md:text-lg rounded-r-md border-t border-r border-b border-orange-500"><img class="mt" src="images/icon-arrow.svg" alt=""></button>
+    <input type="email" class=" input1 h-12 placeholder-gray-500 outline-none text-xs rounded-tl-2xl rounded-bl-2xl border-l border-t border-b border-gray-200 rounded-l-md text-base md:text-lg px-3 py-2" placeholder=" Search for any IP address or domain">
+    <button class="input11 bg-black h-12 text-black border-2 border-black font-bold px-3 py-2 focus:outline-none rounded-tr-2xl rounded-br-2xl text-base md:text-lg rounded-r-md border-t border-r border-b border-orange-500"><img class="mt" src="images/icon-arrow.svg" alt=""></button>
 </div>
 
 <div class="flex justify-center items-center text-center">
